Version 1.12.4+dev:
 * Campaigns:
   * Eastern Invasion:
     * Fixed scenario events not working right on easy difficulty in 'Captured'.
 * Language and i18n:
   * Updated translations:
 * Multiplayer:
   * Era names no longer support formatting markup in the game setup screen.
 * Miscellaneous and bug fixes:
   * Default to non-strict compilation with CMake.
   * Fixed strict compilation with clang 3.5 and 3.6.
   * Fixed unbound memory read in internal time formatting code with
     specially-crafted input.

Version 1.12.4:
 * Security fixes:
   * Disallowed WML inclusion of .pbl files with a non-lowercase extension too
     (CVE-2015-5070, bug #23504).
 * Miscellaneous and bug fixes:
   * Removed broken Python port of wmlxgettext from data/tools/.

Version 1.12.3:
 * Security fixes:
   * Disallowed inclusion of .pbl files from WML (CVE-2015-5069, bug #23504).
 * AI:
   * Lua AI helper functions: fix bug crashing the AI when number= is not set in
     a unit attack definition
   * Micro AIs: add a warning and avoid crash when a non-existing side is used
     in the [micro_ai] tag
 * Editor:
   * Fixed stack corruption bug in the Side Setup dialog.
 * Language and i18n:
   * Updated translations: Chinese (Simplified), Galician, Scottish Gaelic,
     Spanish.
 * Multiplayer:
   * A New Land:
     * Removed the ability to select individual factions when using map
       settings as this breaks player recruit lists (bug #23593).
   * Removed the Silver Mage from the available leaders for the Rebels faction
     in Age of Heroes.
   * Fixed "Accept whispers from friends only" not working with the default
     lobby UI, and added a warning every 5 minutes for individual rejected
     senders.
 * User interface:
   * Fixed minimap buttons appearing without contents or in the wrong state
     during WML start events until they are interacted with or control is given
     to the player for the first time or some other unspecified thing happens.