@@ -6,6 +6,7 @@ Version 1.12.4+dev:
    * Updated translations:
  * Multiplayer:
    * Era names no longer support formatting markup in the game setup screen.
+   * Made MP lobby filter option filter on eras and mods too (bug #22987).
  * Miscellaneous and bug fixes:
    * Default to non-strict compilation with CMake.
    * Fixed strict compilation with clang 3.5 and 3.6.
